[tool.poetry]
name = "tessa"
version = "0.3.3"
description = "Find financial assets and get their price history without worrying about different APIs or rate limiting."
authors = ["ymyke"]
license = "MIT"
repository = "https://github.com/ymyke/tessa"
homepage = "https://github.com/ymyke/tessa"
readme = "README.md"
keywords = ["python", "finance", "investing", "financial-analysis", "investment-analysis", "financial-data", "coingecko", "investing-com", "investpy", "pycoingecko"]

[tool.poetry.dependencies]
# General:
python = ">=3.7.13,<3.10"
pendulum = ">=2.1"
# price- and search-specific:
investpy = ">=1"    # FIXME Remove
frozendict = ">=2.3"
pycoingecko = ">=2.2"
yfinance = "^0.1.74"
# symbol-specific:
seaborn = ">=0.11"
matplotlib = ">=3.5"
PyYAML = ">=6"

[tool.poetry.dev-dependencies]
pytest = "*"
ipykernel = "*"
black = "*"
pylint = "*"
pytest-mock = "*"
pdoc = "*"
pdbpp = "*"
pytest-random-order = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
