[tool.poetry]
name = "tessa"
version = "0.9.0"
description = "Find financial assets and get their price history without worrying about different APIs or rate limiting."
authors = ["ymyke"]
license = "MIT"
repository = "https://github.com/ymyke/tessa"
homepage = "https://github.com/ymyke/tessa"
documentation = "https://ymyke.github.io/tessa/tessa.html"
readme = "README.md"
keywords = ["python", "finance", "investing", "financial-analysis", "investment-analysis", "financial-data", "coingecko", "pycoingecko", "yahoo", "yahoo-finance", "yfinance"]

[tool.poetry.dependencies]
# General:
python = ">=3.9"
pendulum = ">=2.1"
# price- and search-specific:
pycoingecko = ">=2.2"
yfinance = "^0.2.3"
# symbol-specific:
seaborn = ">=0.11"
matplotlib = ">=3.5"
PyYAML = ">=6"

[poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"
pytest-random-order = "*"
black = "*"
pdoc = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
