[tool.poetry]
name = "tessa"
version = "0.10.0"
description = "Find financial assets and get their price history without worrying about different APIs or rate limiting."
authors = ["ymyke"]
license = "MIT"
repository = "https://github.com/ymyke/tessa"
homepage = "https://github.com/ymyke/tessa"
documentation = "https://ymyke.github.io/tessa/tessa.html"
readme = "README.md"
keywords = ["python", "finance", "investing", "financial-analysis", "investment-analysis", "financial-data", "coingecko", "pycoingecko", "yahoo", "yahoo-finance", "yfinance"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pendulum = ">=3.0"
pycoingecko = ">=3.0"
yfinance = ">=1.0"
seaborn = ">=0.12"
matplotlib = ">=3.5"
PyYAML = ">=6"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"
pytest-random-order = "*"
black = "*"
pdoc = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
